# tuw-applied-gen-ai-2026s

./: .env.example  .gitignore  CHANGES.md  CHANGES.txt  README.md  docker-compose.yml
backend/: Dockerfile  config.yaml  pyproject.toml  results_50.json  results_50_texts.json  test_result.json  test_result_texts.json  test_result_v2.json  test_result_v2_texts.json  test_result_v3.json  test_result_v3_5rec.json  test_result_v3_5rec_texts.json  test_result_v3_texts.json  test_result_v7.json  test_result_v7_texts.json
backend/app/: config.py  eval.py  graph.py  llm.py  main.py  matcher.py  ner.py  nodes.py  prompts.py  schemas.py  scoring.py  state.py
backend/eval_results/: results_50.json  results_50_texts.json  test_result.json  test_result_texts.json  test_result_v2.json  test_result_v2_texts.json  test_result_v3.json  test_result_v3_5rec.json  test_result_v3_5rec_texts.json  test_result_v3_texts.json  test_result_v7.json  test_result_v7_texts.json
backend/tests/: test_config.py  test_llm.py  test_main.py  test_matcher.py  test_ner.py  test_scoring.py
data/eval/: tab.json  type_labels.json
frontend/: Dockerfile  app.js  index.html  nginx.conf  styles.css
